[gd_scene load_steps=12 format=2]

[ext_resource path="res://character_scenes/Swat.tscn" type="PackedScene" id=1]
[ext_resource path="res://SternerRegnix.gd" type="Script" id=2]
[ext_resource path="res://components/CheckCanSeeRay.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/CanShoot.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/CanCarry.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/CanBeShot.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/UnitData.tscn" type="PackedScene" id=7]
[ext_resource path="res://components/CanBeSelected.tscn" type="PackedScene" id=8]
[ext_resource path="res://BloodSplatter.tscn" type="PackedScene" id=9]
[ext_resource path="res://components/CanPause.tscn" type="PackedScene" id=10]

[sub_resource type="CylinderShape" id=1]
radius = 0.414686

[node name="SternerRegnix" type="KinematicBody" groups=["enemy", "sterner"]]
collision_layer = 9
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.992527, 0 )
shape = SubResource( 1 )

[node name="Rotator" type="Spatial" parent="."]

[node name="Swat" parent="Rotator" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="BloodSplatter" parent="Rotator/Swat" instance=ExtResource( 9 )]

[node name="ChangeDirTimer" type="Timer" parent="."]

[node name="CheckCanSeeRay" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cast_to = Vector3( 0, 0, 0 )

[node name="CanShoot" parent="." instance=ExtResource( 4 )]

[node name="CanCarry" parent="." instance=ExtResource( 5 )]

[node name="CanBeShot" parent="." instance=ExtResource( 6 )]

[node name="CanBeSelected" parent="." instance=ExtResource( 8 )]

[node name="CanPause" parent="." instance=ExtResource( 10 )]

[node name="UnitData" parent="." instance=ExtResource( 7 )]

[connection signal="input_event" from="." to="." method="_on_EnemyAgent_input_event"]
[connection signal="timeout" from="ChangeDirTimer" to="." method="_on_ChangeDirTimer_timeout"]
